--- a/sfs-resources.html
+++ b/sfs-resources.html
@@ -1,7 +1,15 @@
 <html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VDYY6RYRK1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'G-VDYY6RYRK1');
+    </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 
@@ -42,20 +50,26 @@
     </ul>
 
     <!--<div class="container m-4">-->
-        <h2 class="m-4 pl-4">Resources</h1>
+    <h2 class="m-4 pl-4">Resources</h1>
         <div class="row m-4">
             <div class="col-sm-8 p-4 ml-4 mr-4 mb-4 bg-white">
-                <p>The resources listed here that are links to articles and tutorials on Medium are <i>Friend</i> links that bypass
-                the Medium paywall.</p>
+                <p>The resources listed here that are links to articles and tutorials on Medium are <i>Friend</i> links
+                    that bypass
+                    the Medium paywall.</p>
                 <div>
-                <a  class="lead" href="https://towardsdatascience.com/publish-your-streamlit-apps-in-the-cloud-3ac5a5fe3d51?sk=83e2deb4d2cf42d2399de06ae83adc7c" target="_blank">Publish Your Streamlit Apps in the Cloud</a><br/>
-                Share your Streamlit apps with these free tools: Streamlit Cloud, Github and VSCode<br/>
-                <a class="lead" href="https://towardsdatascience.com/3-ways-to-create-a-multi-page-streamlit-app-1825b5b07c0f?sk=89d1e06d84cdc1005dfa014665a55c3c" target="_blank">4 Ways to Create a Multi-Page Streamlit App</a><br/>
-                Streamlit may not have been designed for full-blown websites, but it is fairly straightforward to create multiple pages in a single app<br/>
-                <a class="lead" href="" target="_blank"></a><br/>
-                <a class="lead" href="" target="_blank"></a><br/>
-                <a class="lead" href="" target="_blank"></a><br/>
-                <a class="lead" href="" target="_blank"></a><br/>
+                    <a class="lead"
+                        href="https://towardsdatascience.com/publish-your-streamlit-apps-in-the-cloud-3ac5a5fe3d51?sk=83e2deb4d2cf42d2399de06ae83adc7c"
+                        target="_blank">Publish Your Streamlit Apps in the Cloud</a><br />
+                    Share your Streamlit apps with these free tools: Streamlit Cloud, Github and VSCode<br />
+                    <a class="lead"
+                        href="https://towardsdatascience.com/3-ways-to-create-a-multi-page-streamlit-app-1825b5b07c0f?sk=89d1e06d84cdc1005dfa014665a55c3c"
+                        target="_blank">4 Ways to Create a Multi-Page Streamlit App</a><br />
+                    Streamlit may not have been designed for full-blown websites, but it is fairly straightforward to
+                    create multiple pages in a single app<br />
+                    <a class="lead" href="" target="_blank"></a><br />
+                    <a class="lead" href="" target="_blank"></a><br />
+                    <a class="lead" href="" target="_blank"></a><br />
+                    <a class="lead" href="" target="_blank"></a><br />
                 </div>
             </div>
             <div class="col-sm-3 p-4 ml-4 mr-4 mb-4 bg-white">
@@ -66,7 +80,7 @@
                 <hr />
             </div>
         </div>
-    <!--</div>-->
+        <!--</div>-->
 </body>
 
 </html>
