--- a/sfs-resources.html
+++ b/sfs-resources.html
@@ -54,13 +54,13 @@
         <div class="row m-4">
             <div class="col-sm-8 p-4 ml-4 mr-4 mb-4 bg-white">
                 <p>The resources listed here that are links to articles and tutorials on Medium are <i>Friend</i> links
-                    that bypass
-                    the Medium paywall.</p>
+                    that bypass the Medium paywall.</p>
                 <div>
                     <a class="lead"
-                        href="https://towardsdatascience.com/publish-your-streamlit-apps-in-the-cloud-3ac5a5fe3d51?sk=83e2deb4d2cf42d2399de06ae83adc7c"
+                        href="deploytocloud/deploytocloud.html"
                         target="_blank">Publish Your Streamlit Apps in the Cloud</a><br />
                     Share your Streamlit apps with these free tools: Streamlit Cloud, Github and VSCode<br />
+                    <!--https://towardsdatascience.com/publish-your-streamlit-apps-in-the-cloud-3ac5a5fe3d51?sk=83e2deb4d2cf42d2399de06ae83adc7c"-->
                     <a class="lead"
                         href="https://towardsdatascience.com/3-ways-to-create-a-multi-page-streamlit-app-1825b5b07c0f?sk=89d1e06d84cdc1005dfa014665a55c3c"
                         target="_blank">4 Ways to Create a Multi-Page Streamlit App</a><br />
