--- a/deploytocloud/deploytocloud.html
+++ b/deploytocloud/deploytocloud.html
@@ -44,9 +44,9 @@
     </div>
 
     <ul class="navbar navbar-expand-lg navbar-light lead mr-4">
-        <a class="nav-link active ml-auto" href="/index.html">Home</a>
-        <a class="nav-link active" href="/sfs-resources.html">Resources</a>
-        <a class="nav-link active" href="/sfs-about.html">About</a>
+        <a class="nav-link active ml-auto" href="../index.html">Home</a>
+        <a class="nav-link active" href="../sfs-resources.html">Resources</a>
+        <a class="nav-link active" href="../sfs-about.html">About</a>
     </ul>
 
     <div class="row m-4">
