--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <html>
 
 <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta property="og:image"
+        content="https://alanjones2.github.io/streamlitfromscratch/images/3-apps.webp">
+    <meta name="twitter:image:src"
+        content="https://alanjones2.github.io/streamlitfromscratch/images/3-apps.webp">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="article:author" content="https://alanjones2.github.io/streamlitfromscratch">
+    <meta name="twitter:creator" content="@MrAlanJones">
+    <meta name="author" content="Alan Jones">
+
+
+    <meta content="Streamlit from Scratch: easily create compelling data science apps with the Streamlit framework"
+        name="description">
+    <meta content="https://alanjones2.github.io/streamlitfromscratch" property="og:url">
+    <meta content="Streamlit from Scratch"
+        property="og:title">
+
+
+
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VDYY6RYRK1"></script>
     <script>
@@ -33,7 +56,7 @@
         <hr />
         <span class="text-secondary mr-4">
             Streamlit is a framework for creating Data Science apps in Python.<br />
-            <b>Streamlit from Scratch</b> is an evolving online resource that will teach you how to get started with
+            <b>Streamlit from Scratch</b> is an online resource that will teach you how to get started with
             Streamlit<br />
             from you first simple text-based web app, then adding media, presenting data, and finally building fully
             functional data dashboard apps<br />
