--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:image"
-        content="https://alanjones2.github.io/streamlitfromscratch/images/3-apps.webp">
-    <meta name="twitter:image:src"
-        content="https://alanjones2.github.io/streamlitfromscratch/images/3-apps.webp">
+    <meta property="og:image" content="https://alanjones2.github.io/streamlitfromscratch/images/3-apps.webp">
+    <meta name="twitter:image:src" content="https://alanjones2.github.io/streamlitfromscratch/images/3-apps.webp">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="article:author" content="https://alanjones2.github.io/streamlitfromscratch">
     <meta name="twitter:creator" content="@MrAlanJones">
@@ -18,8 +16,7 @@
     <meta content="Streamlit from Scratch: easily create compelling data science apps with the Streamlit framework"
         name="description">
     <meta content="https://alanjones2.github.io/streamlitfromscratch" property="og:url">
-    <meta content="Streamlit from Scratch"
-        property="og:title">
+    <meta content="Streamlit from Scratch" property="og:title">
 
 
 
@@ -159,15 +156,9 @@
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
 
-            <script async
-                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
-                crossorigin="anonymous"></script>
-            <!-- sfs vertical -->
-            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3208991186670959"
-                data-ad-slot="6617299104" data-ad-format="auto" data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            <a target="_blank"
+                href="https://www.amazon.com/b?_encoding=UTF8&tag=alanjones01-20&linkCode=ur2&linkId=01b373e14e7ec67f0b8b45559be32fb0&camp=1789&creative=9325&node=13900871">tech
+                best sellers</a>
 
             <script async
                 src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
