--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
 
     </script>
 
+    <div id="amzn-assoc-ad-0a3de283-f982-4bea-8139-8120798f1216"></div>
+    <script async
+        src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=0a3de283-f982-4bea-8139-8120798f1216"></script>
+
     <footer class="text-right text-secondary p-4 m-4">
 
         <i class="m-4">&copy; 2022, Alan Jones</i>
