--- a/index.html
+++ b/index.html
@@ -140,36 +140,20 @@
         <div class="col-sm-3 p-4 ml-4 mr-4 mb-4 bg-white ">
 
             <div class="lead">
-                Subscribe to the free <a href="https://streamlitfromscratch.substack.com/" target="_blank">Streamlit
-                    from Scratch newsletter</a> to receive updates, new articles, and news about Streamlit
+                <h1>Streamlit from Scratch is now a book!</h1>
+                <p>That means that this site will be retired, soon and the newsletter on Substack will cease, too.</p>
+                <p>It's not bad news, though. You can get the book from Gumroad for only $1 (for a limited time). 
+                And that is good news because it means that for the investment of only a dollar, you will be able to 
+                download any future updates and improvements for free.
+                <a href="https://alanjones.gumroad.com/l/streamlitfromscratch" target="_blank"><b>Get the book here for only $1</b></a> 
+                And dont' forget this is a limited offer - the price will go up in the future.
+                </p>
+
+
             </div>
             <hr />
 
 
-            <script async
-                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
-                crossorigin="anonymous"></script>
-            <!-- sfs vertical -->
-            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3208991186670959"
-                data-ad-slot="6617299104" data-ad-format="auto" data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-
-            <iframe
-                src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=49&l=ur1&category=amazondevices&banner=1M74CAHK9KZ0ZN99GNG2&f=ifr&linkID=d181ac653383a5cb55997ab1ee33be3b&t=alanjones01-20&tracking_id=alanjones01-20"
-                width="300" height="600" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"
-                sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation"></iframe>
-
-            <script async
-                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3208991186670959"
-                crossorigin="anonymous"></script>
-            <!-- sfs vertical -->
-            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3208991186670959"
-                data-ad-slot="6617299104" data-ad-format="auto" data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
         </div>
     </div>
     <script>
@@ -222,9 +206,7 @@
 
     </script>
 
-    <div id="amzn-assoc-ad-69c31123-ddf7-4858-8ad7-4bf99d585e24"></div>
-    <script async
-        src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=69c31123-ddf7-4858-8ad7-4bf99d585e24"></script>
+
 
     <footer class="text-right text-secondary p-4 m-4">
 
