--- a/index.html
+++ b/index.html
@@ -143,9 +143,12 @@
                 <h1>Streamlit from Scratch is now a book!</h1>
                 <p>That means that this site will be retired, soon and the newsletter on Substack will cease, too.</p>
                 <p>It's not bad news, though. You can get the book from Gumroad for only $1 (for a limited time). 
-                And that is good news because it means that for the investment of only a dollar, you will be able to 
-                download any future updates and improvements for free.
-                <a href="https://alanjones.gumroad.com/l/streamlitfromscratch" target="_blank"><b>Get the book here for only $1</b></a> 
+                And that is good news because it means that for the investment of only a dollar, <i>you will be able to 
+                download any future updates and improvements for <b>free</b></i>.</p>
+                <h3>
+                <a href="https://alanjones.gumroad.com/l/streamlitfromscratch" target="_blank"><b>Get the book here for only $1</b></a>
+                </h3>
+                <p> 
                 And dont' forget this is a limited offer - the price will go up in the future.
                 </p>
 
