--- a/index.html
+++ b/index.html
@@ -90,6 +90,81 @@
             on <b>Streamlit from Scratch</b> and other topics here: <a href="https://technofile.substack.com" target="_blank" >Alan's Technofile</a>
         </div>
     </div>
+            <div class="row m-4">
+            <div class="col-sm-8 h5">
+                <h4>Streamlit from Scratch Articles</h4>
+                <hr />
+                <div class="row">
+                    <div class="col-sm-1">
+                        <!--<img width="100%" src="images/hamlet2textscreenshot.png" />-->
+                        <div class="display-1 text-center">1</div>
+                    </div>
+                    <div class="col-sm-10">
+                        <p><a href="https://towardsdatascience.com/streamlit-from-scratch-getting-started-f4baa7dd6493?sk=2c009fc4106a896467bda51901e31086"
+                                target="_blank">
+                                Streamlit from Scratch: Getting Started
+                            </a></p>
+                        <p class="font-weight-light">
+                            Finding the tools you need and how to use them to create your first interactive web app in
+                            Python and Streamlit
+
+                        </p>
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <!--<img width="100%" src="images/eagleapp.png" />-->
+                        <div class="display-1 text-center">2</div>
+        
+                    </div>
+                    <div class="col-sm-10">
+                        <p><a href="https://towardsdatascience.com/streamlit-from-scratch-embedding-images-video-and-audio-8b2e8b98fad4?sk=df84eef479683e1b50ab2666c624f5d8"
+                                target="_blank">
+                                Streamlit from Scratch: Embedding Images, Video and Audio
+                            </a></p>
+                        <p class="font-weight-light">
+                            Streamlit was designed to help data scientists but it’s not just about data, adding media
+                            to your apps helps to communicate your ideas
+
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-1">
+                        <div class="display-1 text-center">3</div>
+
+                    </div>
+                    <div class="col-sm-10">
+                        <p><a href="https://towardsdatascience.com/streamlit-from-scratch-presenting-data-d5b0c77f9622?sk=ab53df2ace41e7f337f79a790f9fd399"
+                                target="_blank">
+                                Streamlit from Scratch: Presenting Data
+                            </a></p>
+                        <p class="font-weight-light">
+                            From text and tables to sophisticated charts. From Pandas dataframes to Matplotlib, Plotly,
+                            Altair and other charts. Streamlit provides a comprehensive set of tools for presenting your
+                            data
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <div class="display-1 text-center">4</div>
+                    </div>
+                    <div class="col-sm-10">
+                        <p><a href="https://towardsdatascience.com/streamlit-from-scratch-build-a-data-dashboard-with-streamlits-layout-and-ui-features-a2fc2f0a6a59?sk=70e6b7b65cc87093fb7fd5727ced6c0b"
+                                target="_blank">
+                                Streamlit from Scratch: Build a Data Dashboard with Streamlit's Layout and
+                                UI features</a>
+                        <p class="font-weight-light">Streamlit has simple but effective components for user interaction
+                            and layout
+                            which let us build effective and attractive data science and dashboard applications
+                        </p>
+                        </p>
+                    </div>
+                </div>
+
     <footer class="text-right text-secondary p-4 m-4">
 
         <!--<i class="text-right">&copy; 2023, Alan Jones</i>-->
