--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 <body class="p5 text-dark bg-light">
 
     <div class="jumbotron" style="padding:2rem">
-        <h1 class="display-6" style="font-weight:bolder;color: darkblue;">Streamlit<span style="font-weight:lighter"> from Scratch</span>
-            <span class="text-secondary" style="font-size:50%;font-weight: lighter;color: darkblue;"> building data science apps with
+        <h1 class="display-6" style="font-weight:bolder;color: darkblue;">Streamlit<span style="font-weight:lighter">
+                from Scratch</span>
+            <span class="text-secondary" style="font-size:50%;font-weight: lighter;color: darkblue;"> building data
+                science apps with
                 Python</span>
         </h1>
         <hr />
@@ -48,13 +50,14 @@
                 <li>We start coding with a simple text-based web app</li>
                 <li>Then we add media - images, video, and audio</li>
                 <li>Next we present data - charts and maps using Matplotlib, Plotly and other charting tools</li>
-                <li>Finally, we create fully interactive data dashboard apps using Streamlit's simple but powerful layout capabilities</li>
+                <li>Finally, we create fully interactive data dashboard apps using Streamlit's simple but powerful
+                    layout capabilities</li>
             </ul>
 
-        </p>
+            </p>
         </span>
     </div>
-<!--
+    <!--
     <ul class="navbar navbar-expand-lg navbar-light lead  mr-4">
         <a class="nav-link active ml-auto" href="book-index.html">Home</a>
         <a class="nav-link active" href="book-resources.html">Resources</a>
@@ -64,34 +67,8 @@
 
 
     <div class="row">
-        <div class="col-sm-6 p-4 ml-4 mr-4 ">
+        <div class="col-sm-7 p-4 ml-4 mr-4 ">
             <div class="lead">
-                <h3>Streamlit from Scratch is an ebook available in PDF or ePub format.</h3>
-                <p>You can get the book from Gumroad for only $1 (for a limited time). 
-                And that is good news because it means that for the investment of only a dollar, <i>you will be able to 
-                download any future updates and improvements for <b>free</b></i>.</p>
-            </div>
-        </div>
-
-        <div class="col-sm-2 p-4 ml-4 mr-4 mb-4 text-right">
-            <h3>
-                <a href="https://alanjones.gumroad.com/l/streamlitfromscratch" target="_blank"><b>Download for $1</b></a>
-            </h3>
-            <p> 
-                <i>But remember this is a limited offer - the price will go up at some time in the future.</i>
-            </p>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-sm-6 p-4 ml-4 mr-4 lead ">
-            You can find more Streamlit resources and other data science, data visualisation and programming articles on 
-            <a href="https://alanjones2.github.io" target="_blank">my web site</a> and sign up for a free newsletter for updates 
-            on <b>Streamlit from Scratch</b> and other topics here: <a href="https://technofile.substack.com" target="_blank" >Alan's Technofile</a>
-        </div>
-    </div>
-            <div class="row m-4">
-            <div class="col-sm-8 h5">
                 <h4>Streamlit from Scratch Articles</h4>
                 <hr />
                 <div class="row">
@@ -116,7 +93,7 @@
                     <div class="col-sm-1">
                         <!--<img width="100%" src="images/eagleapp.png" />-->
                         <div class="display-1 text-center">2</div>
-        
+
                     </div>
                     <div class="col-sm-10">
                         <p><a href="https://towardsdatascience.com/streamlit-from-scratch-embedding-images-video-and-audio-8b2e8b98fad4?sk=df84eef479683e1b50ab2666c624f5d8"
@@ -165,11 +142,44 @@
                     </div>
                 </div>
 
-    <footer class="text-right text-secondary p-4 m-4">
+            </div>
+        </div>
+        <div class="col-sm-4 p-4 ml-4 mr-4 mb-4 text-right">
+            <div class="lead">
+                <h3>Streamlit from Scratch is also an ebook available in PDF or ePub format.</h3>
+                <p>The book is a compilation and updated version of the articles</p>
+                <p>You can get the book from Gumroad for only $1 (for a limited time).
+                    And that is good news because it means that for the investment of only a dollar, <i>you will be
+                        able to
+                        download any future updates and improvements for <b>free</b></i>.</p>
+            </div>
+            <h3>
+                <a href="https://alanjones.gumroad.com/l/streamlitfromscratch" target="_blank"><b>Download for
+                        $1</b></a>
+            </h3>
+            <p>
+                <i>But remember this is a limited offer - the price will go up at some time in the future.</i>
+            </p>
+            <div class="lead ">
+                You can find more Streamlit resources and other data science, data visualisation and programming
+                articles on
+                <a href="https://alanjones2.github.io" target="_blank">my web site</a> and sign up for a free
+                newsletter for updates
+                on <b>Streamlit from Scratch</b> and other topics here: <a href="https://technofile.substack.com"
+                    target="_blank">Alan's Technofile</a>
+            </div>
+        </div>
+    </div>
 
-        <!--<i class="text-right">&copy; 2023, Alan Jones</i>-->
+        <div class="row">
 
-    </footer>
+        </div>
+        <div class="row m-4">
+            < <footer class="text-right text-secondary p-4 m-4">
+
+                <!--<i class="text-right">&copy; 2023, Alan Jones</i>-->
+
+                </footer>
 </body>
 
 </html>
