--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="row">
         <div class="col-sm-7 p-4 ml-4 mr-4 ">
             <div class="lead">
-                <h4>Streamlit from Scratch Articles</h4>
+                <h3>Streamlit from Scratch Articles</h3>
                 <hr />
                 <div class="row">
                     <div class="col-sm-1">
@@ -77,10 +77,10 @@
                         <div class="display-1 text-center">1</div>
                     </div>
                     <div class="col-sm-10">
-                        <p><a href="https://towardsdatascience.com/streamlit-from-scratch-getting-started-f4baa7dd6493?sk=2c009fc4106a896467bda51901e31086"
+                        <h4><a href="https://towardsdatascience.com/streamlit-from-scratch-getting-started-f4baa7dd6493?sk=2c009fc4106a896467bda51901e31086"
                                 target="_blank">
                                 Streamlit from Scratch: Getting Started
-                            </a></p>
+                            </a></h4>
                         <p class="font-weight-light">
                             Finding the tools you need and how to use them to create your first interactive web app in
                             Python and Streamlit
@@ -96,10 +96,10 @@
 
                     </div>
                     <div class="col-sm-10">
-                        <p><a href="https://towardsdatascience.com/streamlit-from-scratch-embedding-images-video-and-audio-8b2e8b98fad4?sk=df84eef479683e1b50ab2666c624f5d8"
+                        <h4><a href="https://towardsdatascience.com/streamlit-from-scratch-embedding-images-video-and-audio-8b2e8b98fad4?sk=df84eef479683e1b50ab2666c624f5d8"
                                 target="_blank">
                                 Streamlit from Scratch: Embedding Images, Video and Audio
-                            </a></p>
+                            </a></h4>
                         <p class="font-weight-light">
                             Streamlit was designed to help data scientists but it’s not just about data, adding media
                             to your apps helps to communicate your ideas
@@ -114,10 +114,10 @@
 
                     </div>
                     <div class="col-sm-10">
-                        <p><a href="https://towardsdatascience.com/streamlit-from-scratch-presenting-data-d5b0c77f9622?sk=ab53df2ace41e7f337f79a790f9fd399"
+                        <h4><a href="https://towardsdatascience.com/streamlit-from-scratch-presenting-data-d5b0c77f9622?sk=ab53df2ace41e7f337f79a790f9fd399"
                                 target="_blank">
                                 Streamlit from Scratch: Presenting Data
-                            </a></p>
+                            </a></h4>
                         <p class="font-weight-light">
                             From text and tables to sophisticated charts. From Pandas dataframes to Matplotlib, Plotly,
                             Altair and other charts. Streamlit provides a comprehensive set of tools for presenting your
@@ -130,15 +130,15 @@
                         <div class="display-1 text-center">4</div>
                     </div>
                     <div class="col-sm-10">
-                        <p><a href="https://towardsdatascience.com/streamlit-from-scratch-build-a-data-dashboard-with-streamlits-layout-and-ui-features-a2fc2f0a6a59?sk=70e6b7b65cc87093fb7fd5727ced6c0b"
+                        <h4><a href="https://towardsdatascience.com/streamlit-from-scratch-build-a-data-dashboard-with-streamlits-layout-and-ui-features-a2fc2f0a6a59?sk=70e6b7b65cc87093fb7fd5727ced6c0b"
                                 target="_blank">
                                 Streamlit from Scratch: Build a Data Dashboard with Streamlit's Layout and
-                                UI features</a>
+                                UI features</a></h4>
                         <p class="font-weight-light">Streamlit has simple but effective components for user interaction
                             and layout
                             which let us build effective and attractive data science and dashboard applications
                         </p>
-                        </p>
+                        
                     </div>
                 </div>
 
