--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
-<body class="p5 text-dark bg-light">
+<body class="container">
 
     <div class="jumbotron" style="padding:2rem">
+        <hr/>
         <h1 class="display-6" style="font-weight:bolder;color: darkblue;">Streamlit<span style="font-weight:lighter">
                 from Scratch</span>
             <span class="text-secondary" style="font-size:50%;font-weight: lighter;color: darkblue;"> building data
@@ -44,17 +45,28 @@
         <hr />
         <span class="lead">
             <p>Streamlit is a framework for creating Data Science apps in Python.</p>
-            <p><b>Streamlit from Scratch</b> will teach you how to get started with Streamlit in 5 steps:
-            <ul>
-                <li>First, we show you the tools that you will need</li>
-                <li>We start coding with a simple text-based web app</li>
-                <li>Then we add media - images, video, and audio</li>
-                <li>Next we present data - charts and maps using Matplotlib, Plotly and other charting tools</li>
-                <li>Finally, we create fully interactive data dashboard apps using Streamlit's simple but powerful
-                    layout capabilities</li>
-            </ul>
+            <div>
+                <p><b>Streamlit from Scratch</b> will teach you how to get started with Streamlit in 5 steps:</p>
+                <div class="row">
+                    <div class="col-sm-6 ">
+                        <ul>
+                            <li>First, we show you the tools that you will need</li>
+                            <li>We start coding with a simple text-based web app</li>
+                            <li>Then we add media - images, video, and audio</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 ">
+                        <ul>
+                            <li>Next we present data - charts and maps using Matplotlib, Plotly and other charting tools
+                            </li>
+                            <li>Finally, we create fully interactive data dashboard apps using Streamlit's simple but
+                                powerful
+                                layout capabilities</li>
+                        </ul>
+                    </div>
+                </div>
 
-            </p>
+            </div>
         </span>
     </div>
     <!--
@@ -67,7 +79,7 @@
 
 
     <div class="row">
-        <div class="col-sm-7 p-4 ml-4 mr-4 ">
+        <div class="col-sm-8 ">
             <div class="lead">
                 <h3>Streamlit from Scratch Articles</h3>
                 <hr />
@@ -82,7 +94,7 @@
                                 Streamlit from Scratch: Getting Started
                             </a></h4>
                         <p class="font-weight-light">
-                            Finding the tools you need and how to use them to create your first interactive web app in
+                            Get the tools you need and how to use them to create your first interactive web app in
                             Python and Streamlit
 
                         </p>
@@ -138,15 +150,15 @@
                             and layout
                             which let us build effective and attractive data science and dashboard applications
                         </p>
-                        
+
                     </div>
                 </div>
 
             </div>
         </div>
-        <div class="col-sm-4 p-4 ml-4 mr-4 mb-4 text-right">
-            <div class="lead">
-                <h3>Streamlit from Scratch is also an ebook available in PDF or ePub format.</h3>
+        <div class="col-sm-4 text-right">
+            <div>
+                <h4>Streamlit from Scratch is also an ebook available in PDF or ePub format.</h4>
                 <p>The book is a compilation and updated version of the articles</p>
                 <p>You can get the book from Gumroad for only $1 (for a limited time).
                     And that is good news because it means that for the investment of only a dollar, <i>you will be
@@ -171,15 +183,15 @@
         </div>
     </div>
 
-        <div class="row">
+    <div class="row">
 
-        </div>
-        <div class="row m-4">
-            < <footer class="text-right text-secondary p-4 m-4">
+    </div>
+    <div class="row m-4">
+        < <footer class="text-right text-secondary p-4 m-4">
 
-                <!--<i class="text-right">&copy; 2023, Alan Jones</i>-->
+            <!--<i class="text-right">&copy; 2023, Alan Jones</i>-->
 
-                </footer>
+            </footer>
 </body>
 
 </html>
