--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body class="container">
 
     <div class="jumbotron" style="padding:2rem">
-        <hr/>
+        <hr />
         <h1 class="display-6" style="font-weight:bolder;color: darkblue;">Streamlit<span style="font-weight:lighter">
                 from Scratch</span>
             <span class="text-secondary" style="font-size:50%;font-weight: lighter;color: darkblue;"> building data
@@ -153,6 +153,22 @@
 
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <div class="display-1 text-center"></div>
+                    </div>
+                    <div class="col-sm-10">
+                        <h4>More resources...</h4>
+                        <h4><a href="deploytocloud/deploytocloud2.html" target="_blank">
+                                Deploy a Streamlit App to the Cloud</a></h4>
+                        <h4><a href="mdcolour/mdcolour.html" target="_blank">
+                                Using Colour in Streamlit Markdown</a></h4>
+
+
+                    </div>
+                </div>
+
+
 
             </div>
         </div>
