--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         download any future updates and improvements for <b>free</b></i>.</p>
             </div>
             <h3>
-                <a href="https://alanjones.gumroad.com/l/streamlitfromscratch" target="_blank"><b>Download for
+                <a href="https://alanjones.gumroad.com/l/streamlitfromscratch" target="_blank"><b>Download from 
                         $1</b></a>
             </h3>
             <p>
