--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <img src="sfscover.png" class="img-fluid" alt="Book Cover">
           <h3>Author</h3>
 
-          <p>Alan Jones is an experienced developer, teacher and writer. 
+          <p><a href="https://alanjones2.github.io" target="_blank">Alan Jones</a> is an experienced developer, teacher and writer. 
           He has spend many years in industry as well as teaching in a university in London, UK.
         He now spends hs time writing about Data Science, Data Visualization, AI and related subjects. </p>
           
