--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           
           <p>Release Date: May, 2024</p>
           <!--<p>ISBN: 978-1-234567-89-0</p>-->
-          <a href="#" class="btn btn-primary">Buy Now</a>
+          <a href="#" class="btn btn-primary">Buy Now</a> (available in the next few days)
         </div>
         <div class="col-md-6">
 
