--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
           
           <p>Release Date: May, 2024</p>
           <!--<p>ISBN: 978-1-234567-89-0</p>-->
-          <a href="#" class="btn btn-primary">Buy Now</a> (available in the next few days)
+          <a href="https://www.amazon.com/dp/B0D36M8TPZ" class="btn btn-primary">Buy Now (US)</a>
+          <a href="https://www.amazon.co.uk/dp/B0D36M8TPZ" class="btn btn-primary">Buy Now (UK)</a>
         </div>
         <div class="col-md-6">
 
