--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="bg-dark text-light py-4">
     <div class="container">
       <h1 class="display-4">Streamlit from Scratch</h1>
-      <p class="lead">Streamlit is a framework for developing data science and vizualization applications.
+      <p class="lead">Streamlit is a framework for developing data science and visualization applications.
         <i>Streamlit from Scratch</i> is a a book that will quickly get you up to speed developing those apps.
       </p>
     </div>
@@ -46,12 +46,11 @@
           <p>
             Streamlit is one of the most exciting things to have happened in the Python world.
             It is a framework for creating simple and elegant web applications in pure Python.
-            Although it is aimed primarily at Data Scientists and Analysts, you can also use it as a general-
-            purpose tool for creating web applications.
+            Although it is aimed primarily at Data Scientists and Analysts, you can also use it as a general-purpose tool for creating web applications.
 
             No knowledge of HTML or JavaScript is needed.
 
-            <i>Streamlit from Scratch</i> will take from building a simple we page through to creating fully finctional
+            <i>Streamlit from Scratch</i> will take from building a simple we page through to creating fully functional
             interactive
             data dashboards.
 
