--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
     </div>
   </header>
 
+  <!-- Google Analytics-->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VDYY6RYRK1"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-VDYY6RYRK1');
+  </script>
+
   <!-- Book Details Section -->
   <section class="py-5">
     <div class="container">
