--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <!-- Footer -->
   <footer class="bg-dark text-light py-4">
     <div class="container text-center">
-      <p>&copy; 2024 Book Title</p>
+      <p>&copy; 2024 Alan Jones</p>
     </div>
   </footer>
 
